@@ -518,7 +518,7 @@ class HydrogenBondAnalysis(base.AnalysisBase):
         indices /= self.step
 
         counts = np.zeros_like(self.frames)
-        counts[indices.astype(int)] = tmp_counts
+        counts[indices.astype(np.intp)] = tmp_counts
         return counts
 
     def count_by_type(self):
@@ -536,8 +536,8 @@ class HydrogenBondAnalysis(base.AnalysisBase):
         acceptor atoms in a hydrogen bond.
         """
 
-        d = self.u.atoms[self.hbonds[:, 1].astype(int)]
-        a = self.u.atoms[self.hbonds[:, 3].astype(int)]
+        d = self.u.atoms[self.hbonds[:, 1].astype(np.intp)]
+        a = self.u.atoms[self.hbonds[:, 3].astype(np.intp)]
 
         tmp_hbonds = np.array([d.resnames, d.types, a.resnames, a.types],
                               dtype=str).T
@@ -565,9 +565,9 @@ class HydrogenBondAnalysis(base.AnalysisBase):
         in a hydrogen bond.
         """
 
-        d = self.u.atoms[self.hbonds[:, 1].astype(int)]
-        h = self.u.atoms[self.hbonds[:, 2].astype(int)]
-        a = self.u.atoms[self.hbonds[:, 3].astype(int)]
+        d = self.u.atoms[self.hbonds[:, 1].astype(np.intp)]
+        h = self.u.atoms[self.hbonds[:, 2].astype(np.intp)]
+        a = self.u.atoms[self.hbonds[:, 3].astype(np.intp)]
 
         tmp_hbonds = np.array([d.ids, h.ids, a.ids]).T
         hbond_ids, ids_counts = np.unique(tmp_hbonds, axis=0,
